--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
-<link href='css/general.css' rel='stylesheet' type='text/css'>
+<link href='styles/main.css' rel='stylesheet' type='text/css'>
 <script type='text/javascript' src='scripts/windows.js'></script>
 </head>
 
