Fixing issues with ingredients.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style="background:#000">
-<script>buildWindows()</script>
+<script>buildWindows(window)</script>
 <p>dsfgserghre</p>
 </body>
 </html>
